# register-dispersion-analysis

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  COPYRIGHT.md  README.md  launch-registral-space-analysis.sh  pyproject.toml  requirements.txt  run.bat  summarize-score.sh
.circleci/: config.yml
.github/workflows/: tests.yml
benchmarks/: README.md  manifest.json
benchmarks/fixtures/: chord_texture.musicxml  narrow_cluster.musicxml  octave_doublings.musicxml  register_shift.musicxml  rest_gap.musicxml  tied_sustain.musicxml  wide_span.musicxml
benchmarks/frozen_outputs/: chord_texture.json  narrow_cluster.json  octave_doublings.json  register_shift.json  rest_gap.json  tied_sustain.json  wide_span.json
benchmarks/scripts/: compare_frozen_outputs.py  generate_frozen_outputs.py
corpus/reports/: registral_regression_inspection.json  registral_regression_inspection.md
corpus/scripts/: create_registral_regression_fixtures.py  inspect_registral_regression.py
docs/: METRIC_SEMANTICS.md  PARAMETERIZATION_GUIDE.md  REGISTRAL_REGRESSION_FIXTURES.md
install/: README.md
install/launchers/: Launch-Registral-Space-Analysis.bat  Launch-Registral-Space-Analysis.command  Summarize-Score.bat
install/linux/: install.sh
install/macos/: INSTALL.command
install/windows/: INSTALL.bat  Install-Easy.ps1  README.md  START-HERE.bat  config.ps1
src/registral_dispersion/: __init__.py  __main__.py  aggregation.py  analysis_presets.py  analyzer.py  app.py  concentration_map.py  json_export.py  metric_documentation.py  observation.py  output_paths.py  pitch_utils.py  plotting.py  profiles.py  results.py  sampling.py  score_io.py  service.py  summarize.py  (+4 more)
tests/: __init__.py  test_benchmarks.py  test_concentration_map.py  test_json_export.py  test_main_cli.py  test_output_paths.py  test_registral_dispersion.py  test_registral_regression_fixtures.py  test_research_upgrade.py  test_score_io.py  test_tie_policy.py
(+13 files in other folders)
