[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "registral-dispersion"
version = "0.3.0"
description = "Research tool: registral dispersion (span + mean pairwise distance) on symbolic scores; optional occupancy entropy (MusicXML, MXL, MIDI)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary — see COPYRIGHT.md" }
authors = [{ name = "Luís Raimundo", email = "lmr.2020@outlook.pt" }]
dependencies = [
    "numpy>=1.21",
    "music21>=9.0",
    "matplotlib>=3.5",
    "plotly>=6.1.1,<7",
    "kaleido>=1.0.0,<2",
    "gradio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
registral-dispersion = "registral_dispersion.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["registral_dispersion"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 55
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"src/registral_dispersion/app.py" = ["B008", "E731"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_return_any = false
strict_optional = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "music21.*",
    "gradio.*",
    "plotly.*",
    "matplotlib.*",
    "matplotlib",
    "PIL.*",
]
ignore_missing_imports = true
